# SATSolver

./: .clang-format  CMakeLists.txt  ast.cpp  ast.h  lex.yy.c  lexer.l  parser.y  satsolver.cpp  test.l  test.sat  test.tab.c  test.tab.h  test.y
